--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>tank Website</title>
-    <script type="module" crossorigin src="/assets/index.bf6b5084.js"></script>
-    <link rel="stylesheet" href="/assets/index.afd8a362.css">
+    <script type="module" crossorigin src="/tank/assets/index.bf6b5084.js"></script>
+    <link rel="stylesheet" href="/tank/assets/index.afd8a362.css">
   </head>
   <body>
     <div id="app"></div>
