--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.png" />
+    <link rel="icon" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>tank Website</title>
-    <script type="module" crossorigin src="/tank/assets/index.bf6b5084.js"></script>
-    <link rel="stylesheet" href="/tank/assets/index.afd8a362.css">
+    <script type="module" crossorigin src="/tank/assets/index.0fe04115.js"></script>
+    <link rel="stylesheet" href="/tank/assets/index.8f3b49d4.css">
   </head>
   <body>
     <div id="app"></div>
