--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>tank Website</title>
-    <script type="module" crossorigin src="/tank/assets/index.0fe04115.js"></script>
-    <link rel="stylesheet" href="/tank/assets/index.8f3b49d4.css">
+    <script type="module" crossorigin src="/assets/index.41b5b16a.js"></script>
+    <link rel="stylesheet" href="/assets/index.85b2def3.css">
   </head>
   <body>
     <div id="app"></div>
